css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --white: #fff;
  --light-blue: #2cd8ff;
  --dark-blue: #000072;
  --black: #000;
  --light-grey: #dadada;
  --dark-grey: #b1b2b5;
}
body {
  font-family: "Poppins", sans-serif;
  font-size: 16 px;
  line-height: 1.5;
  background: #fff;

}

a {
  text-decoration: none;
  color: var(--white);
  font-size: 20px;
}

ul {
  list-style: none;
}

img {
  max-width: 100%;
}
/*Navbar*/
.navbar {
  background: var(--dark-blue);
  padding: 20px;
}

.navbar .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar .main-menu ul {
  display: flex;
}

.navbar ul li a {
  padding: 10px 20px;
  display: block;
  font-weight: 600;
  transition: 0.5s;
}
.navbar ul li a:hover {
  color: var(--light-blue);
}
.navbar ul li a i {
  margin-right: 10px;
}
.navbar ul li:last-child a {
  margin-left: 10px;
}
.navbar .btn:hover {
  opacity: 0.7;
  color: var(--white);
}
/* Hero */
.hero {
  position: relative;
  display: flex;
  justify-content: center;
  width: 100%;
  width: 1000px;
  margin: 0 auto;
  max-width: 1000px;
  align-items: center;
  background-color: #000072;

}
.hero .container {
  width: 100%;
  position: relative;
}

.hero .container img{
  width : 100%;
  height: auto;
  display: block;
  object-fit: cover;
  padding: 0;
  margin: 0;
  border: none;
}

.hero .hero-content {
  position: absolute;
  top: 0%;
  left: 0%;
  background-color: var(--light-blue);
  padding: 20px;
  max-width: 80%;
  text-align: center;
  z-index: 2;
  border-radius: 0 0 10px 10px;
  }

.hero .hero-text {
  width: 70%;
  margin-bottom: 20px;
}
/*Applies for all sections*/
.box {
  flex: 1;
  padding: 20px;
  background-color: var(--white);
  text-align: center;
  width: 70%;
}

/* About Us section*/
.about_box2 {
  box-sizing: border-box;
}
.about_box2 img{
  width : 100%;
  height: auto;
  display: block;
  object-fit: cover;
  border-radius: 10px;
}

/*Input Section*/
.input_box1{
  box-sizing: border-box;
}

.input_box1 img{
  width : 100%;
  height: auto;
  display: block;
  object-fit: cover;
  border-radius: 10px;
}


/*Utility Classes*/

.container {
  max-width: 1500px;
  margin: 0 auto;
  padding: 0 15px;
}

.container_double {
  max-width: 1500px;
  margin: auto;
  display: flex;
  justify-content: space-between;
  gap: 20px;
}

.containersm {
  max-width: 750px;
  margin: 0 auto;
  padding: 0 15px;
}

/* Buttons */
.btn {
  display: inline-block;
  padding: 13px 20px;
  background: var(--light-blue);
  font-weight: 600;
  text-decoration: none;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  transition: 0.5s;
}

.btn-grey {
  background: var(--dark-grey);
  color: black;
}

.btn:hover {
  opacity: 0.8;
  color: var(--light-grey);
}

/*Text Classes*/
.text-xxl {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 600;
  margin: 40px 0 20px;
}

.text-xl {
  font-size: 2.2rem;
  line-height: 1.4;
  font-weight: normal;
  margin: 40px 0 20px;
}

.text-lg {
  font-size: 1.8rem;
  line-height: 1.4;
  font-weight: normal;
  margin: 30px 0 20px;
}

.text-md {
  font-size: 1.2rem;
  line-height: 1.4;
  font-weight: normal;
  margin: 20px 0 10px;
}
.text-sm {
  font-size: 0.9;
  line-height: 1.4;
  font-weight: normal;
  margin: 10px 0 5px;
}

.text-center {
  text-align: center;
}

